--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="contentWrapper" id="inner">
+<!-- <div class="contentWrapper" id="inner">
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="collapse navbar-collapse">
@@ -9,7 +9,12 @@
       </div>
     </div>
   </nav>
-</div>
+</div> -->
+
+<nav class="nav">
+  <a class="nav-link active" routerLink="/main">Home</a>
+  <a class="nav-link" routerLink="/formulario">Formulário</a>
+</nav>
 
 <div class="container">
     <router-outlet></router-outlet>
